--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
 body {
   @apply bg-neutral-900
 }
+
+.card {
+  @apply w-[32rem] h-[18rem] bg-neutral-800 rounded-lg border border-neutral-600 flex flex-row p-8 absolute justify-between stroke-[0.1] hover:stroke-[0.2]
+}
